--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -18,7 +18,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = CONTROL ALT, DELETE, exec, wlogout
 bind = $mainMod, L, exec, swaylock
-bind = $mainMod, V, togglefloating, 
+bind = $mainMod, W, togglefloating, 
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
