Edited hyprland keybinds further + added keybind for task manager (btop) * moved application keybinds to upper section

--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -9,6 +9,7 @@
 $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun
+$taskManager = btop
 
 $mainMod = SUPER
 
@@ -22,6 +23,12 @@ bind = $mainMod, W, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+# Application binds
+bind = CONTROL SHIFT, ESCAPE, exec, $terminal sh -c $taskManager # Show Task Manager (btop)
+bindil = , PRINT, exec, grim -g "$(slurp)" -t png -l 9 -c | wl-copy # Screenshot
+bind = $mainMod SHIFT, c, exec, hyprpicker -a # hyprpicker
+bind = $mainMod SHIFT, B, exec, ~/.config/hypr/scripts/restart-waybar.sh # Restart Waybar
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -61,15 +68,6 @@ bindl  = , XF86AudioPlay, exec, playerctl play-pause
 bindl  = , XF86AudioPause, exec, playerctl play-pause
 bindl  = , XF86AudioNext, exec, playerctl next
 bindl  = , XF86AudioPrev, exec, playerctl previous
-
-# Screenshot Bind
-bindil = , PRINT, exec, grim -g "$(slurp)" -t png -l 9 -c | wl-copy
-
-# hyprpicker
-bind = $mainMod SHIFT, c, exec, hyprpicker -a
-
-# Restart Waybar
-bind = $mainMod SHIFT, B, exec, ~/.config/hypr/scripts/restart-waybar.sh
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
