changed waybar theme +added new waybar theme (kept old one) +added new scripts in script dir to be installed into /usr/local/bin +modified install script to reflect changes

--- a/hypr/autoexec.conf
+++ b/hypr/autoexec.conf
@@ -15,7 +15,7 @@ exec-once = hyprctl setcursor Bibata-Original-Ice 24
 exec-once = ~/.config/hypr/scripts/fix-XDPH.sh
 
 # Executing Programs
-exec-once = mako
+exec-once = dunst
 exec-once = waybar
 exec-once = webcord
 #exec-once = /usr/bin/element-desktop --hidden
