Fix/Update yt-dlp
- Remove embed-thumbnail, as it is cumbersome to extract and doesn't work like you'd think
* Fixed output format as it wasn't quoted and the id field wasn't pre/post-fixed with % and s

--- a/yt-dlp/config
+++ b/yt-dlp/config
@@ -1,11 +1,10 @@
 # Output filename in this format
--o %(title)s [(id)].%(ext)s
+-o "%(title)s [%(id)s].%(ext)s"
 
 # Embed chapters
 --embed-chapters
 
 # Thumbnail Options
---embed-thumbnail
 --write-thumbnail
 --convert-thumbnails webp
 
