Slightly changed styling + Made Webcord Slightly Transparent (cool) + added blur to waybar and centered the bar on the blur (it looks instantly cooler)

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -65,8 +65,11 @@ decoration {
     shadow_range = 3
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
-	# blurls = waybar
+    blurls = waybar
 }
+
+windowrulev2 = opacity 0.94, class:WebCord
+windowrulev2 = monitor eDP-1, class:WebCord
 
 animations {
     enabled = yes
