Changed mpv configs + added input.conf + added binds for panning and better zooming + reset + added binds for multimonitor recordings + added configs for screenshotting in mpv.conf

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,1 +1,15 @@
+screenshot-format=webp
+screenshot-webp-lossless=yes
+screenshot-webp-compression=6
+
+screenshot-template=mpvshot_%F__%P_%06n_%tX
+screenshot-directory="~/Pictures"
+
+scale=spline36
+
+# don't close on video finish
+keep-open=always
+
+dither=no  # error-diffusion
+dither-depth=0
 volume=50
