Add floating WM-like alt-tab feature

--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -60,6 +60,13 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+# Floating WM-like Alt-Tab
+bind = ALT, Tab, cyclenext,
+bind = ALT, Tab, bringactivetotop,
+
+bind = ALT SHIFT, Tab, cyclenext, prev
+bind = ALT SHIFT, Tab, bringactivetotop,
+
 # Media/Volume binds
 bindel = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volumecontrol.sh -o d # decrease volume
 bindel = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volumecontrol.sh -o i # increase volume
