--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -17,7 +17,7 @@
 
 	"modules-left": ["custom/padd","custom/l_end","custom/power","custom/r_end","custom/l_end","hyprland/workspaces","custom/r_end","custom/l_end","wlr/taskbar","custom/spotify","custom/r_end","","custom/padd"],
 	"modules-center": ["custom/padd","custom/l_end","clock","custom/r_end","custom/padd"],
-	"modules-right": ["custom/padd","custom/l_end","tray","custom/r_end","custom/l_end","backlight","network","pulseaudio","battery","custom/notifications","custom/r_end","custom/padd"],
+	"modules-right": ["custom/padd","custom/l_end","custom/updates","custom/r_end","custom/l_end","tray","custom/r_end","custom/l_end","backlight","network","pulseaudio","battery","custom/notifications","custom/r_end","custom/padd"],
 
 
 // sourced from modules based on config.ctl //
@@ -250,6 +250,15 @@
         "on-click": "keybinds_hint.sh"
     },
 
+    "custom/updates": {
+        "format":" {}",
+        "tooltip-format": "{}",
+        "escape": true,
+        //"return-type": "json",
+        "exec": "~/.config/waybar/scripts/updates.sh",
+        "restart-interval": 600,
+        "tooltip": false
+    },
 
 // modules for padding //
 
