--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -60,11 +60,12 @@ decoration {
         size = 4
         passes = 2
     }
-
-    drop_shadow = yes
-    shadow_range = 3
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+        enabled = true
+        range = 3
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
     blurls = waybar
 }
 
