--- a/hypr/autoexec.conf
+++ b/hypr/autoexec.conf
@@ -7,7 +7,8 @@
 # ---------------------------------------
 # Executing Requirements
 exec-once = swaylock
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+#exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = systemctl --user start hyprpolkitagent
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = wl-paste --type text --watch cliphist store
