Updated OpenRGB; changed windowrule settings in hyprland as the windowrulev2 keyword is deprecated

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -69,8 +69,8 @@ decoration {
     blurls = waybar
 }
 
-windowrulev2 = opacity 0.94, class:WebCord
-windowrulev2 = monitor eDP-1, class:WebCord
+windowrule = opacity 0.94, class:WebCord
+windowrule = monitor eDP-1, class:WebCord
 
 animations {
     enabled = yes
