--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -5,6 +5,8 @@ screenshot-webp-compression=6
 screenshot-template=mpvshot_%F__%P_%06n_%tX
 screenshot-directory="~/Pictures"
 
+border-background=blur
+
 scale=spline36
 
 # don't close on video finish
